Fix: header word wrap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -299,10 +299,7 @@ h4.major,
 h5.major,
 h6.major {
   border-bottom: solid 1px #ffffff;
-  width: -moz-max-content;
-  width: -webkit-max-content;
-  width: -ms-max-content;
-  width: max-content;
+  width: fit-content;
   padding-bottom: 0.5rem;
   margin: 0 0 1rem 0;
 }
